kubernetes/main/apps/dev/test-nginx/app/deployment.yaml
---
# yaml-language-server: $schema=https://kubernetesjsonschema.dev/v1.34.0/deployment-apps-v1.json
apiVersion: apps/v1
kind: Deployment
metadata:
  name: &app nginx
  namespace: &ns artemis-cluster
spec:
  replicas: 1
  selector:
    matchLabels:
      app: *app
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: *app
    spec:
      containers:
        - name: *app
          resources:
            limits:
              memory: 200Mi
              cpu: 100m
            requests:
              cpu: 100m
              memory: 200Mi
          # - name: NGINX_PORT
          #   value: &port "443"
          # - name: TZ
          #   value: "America/Toronto"
          image: nginx:1.27.3@sha256:bc2f6a7c8ddbccf55bdb19659ce3b0a92ca6559e86d42677a5a02ef6bda2fcef
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
            - name: https
              containerPort: 443
