kubernetes/main/apps/dev/test-nginx/app/Service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-https
  namespace: &ns artemis-cluster
spec:
  selector:
    app: nginx
  type: LoadBalancer
  ports:
    - protocol: TCP
      targetPort: 443
      port: 1443
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-http
  namespace: &ns artemis-cluster
spec:
  selector:
    app: nginx
  type: LoadBalancer
  ports:
    - protocol: TCP
      targetPort: 80
      port: 1880
