kubernetes/main/apps/dev/test-nginx/app/http-route.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: &app nginx
  namespace: &ns artemis-cluster
spec:
  hostnames:
    - nginx.dcunha.io
  # parentRefs:
  #   - name: internal-gateway
  #     namespace: default
  #     sectionName: https
  parentRefs:
    - group: ""
      kind: Service
      name: nginx-http
      namespace: *ns
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: nginx-http
          kind: Service
          namespace: *ns
          port: 1880
